--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,7 @@
         android:text="Income Expense Tracker"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:marginBottom="32dp"/>
+        android:layout_marginBottom="32dp"/>
 
     <Button
         android:id="@+id/btnIncome"
