Handling transactions, categories, subcategories

--- a/app/src/main/res/layout/dialog_add_subcategory.xml
+++ b/app/src/main/res/layout/dialog_add_subcategory.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <!-- Input for subcategory name -->
+    <Spinner
+        android:id="@+id/spinnerCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:spinnerMode="dropdown" />
+
     <EditText
         android:id="@+id/etSubcategoryName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter subcategory name"
-        android:inputType="text" />
+        android:hint="Subcategory Name" />
 
+    <Button
+        android:id="@+id/btnAddSubcategory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Subcategory" />
 </LinearLayout>
