--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,5 +36,12 @@
         android:id="@+id/btnSummary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Summary"/>
+        android:text="Summary"
+        android:layout_marginBottom="16dp"/>
+
+    <Button
+        android:id="@+id/btnDeleteDb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete DB" />
 </LinearLayout>
