--- a/app/src/main/res/layout/item_subcategory.xml
+++ b/app/src/main/res/layout/item_subcategory.xml
@@ -14,15 +14,16 @@
         android:layout_weight="1"
         android:text="Subcategory"
         android:textSize="16sp"
-        android:textColor="@android:color/black" />
+        android:textColor="?android:textColorPrimary"
+        android:background="?android:colorBackground" />
 
     <!-- Delete button for each subcategory -->
     <ImageButton
         android:id="@+id/btnDeleteSubcategory"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:contentDescription="Delete"
         android:src="@drawable/ic_launcher_background"
+        android:background="?android:selectableItemBackground"
         app:tint="@color/cardview_dark_background" />
-
 </LinearLayout>
