--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="green">#13D819</color>
-    <color name="red">#FF1400</color>
+    <color name="green">#0AAB0E</color>
+    <color name="red">#C41B0A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#FFFFFF</color>
     <color name="textPrimary">#000000</color>
@@ -12,4 +12,6 @@
     <color name="income">#21E20E</color>
     <color name="expense">#FF0000</color>
     <color name="summary">#0B7CF1</color>
+    <color name="sky_blue">#19A5F3</color>
+    <color name="teal_200">#03DAC5</color>
 </resources>
