Adding delete icon

--- a/app/src/main/res/layout/activity_subcategory.xml
+++ b/app/src/main/res/layout/activity_subcategory.xml
@@ -22,9 +22,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end"
         android:contentDescription="Add Subcategory"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/baseline_add_circle_outline_24"
         android:tint="@android:color/white"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/material_dynamic_primary0" />
+        android:backgroundTint="@color/white" />
 
 </LinearLayout>
