--- a/app/src/main/res/layout/item_subcategory.xml
+++ b/app/src/main/res/layout/item_subcategory.xml
@@ -23,7 +23,8 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:contentDescription="Delete"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@drawable/ic_delete"
         android:background="?android:selectableItemBackground"
-        app:tint="@color/cardview_dark_background" />
+        android:scaleType="fitCenter"/>
+
 </LinearLayout>
