--- a/app/src/main/res/layout/dialog_add_subcategory.xml
+++ b/app/src/main/res/layout/dialog_add_subcategory.xml
@@ -21,7 +21,5 @@
         android:id="@+id/btnAddSubcategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Subcategory"
-        android:background="?attr/colorPrimary"
-        android:textColor="?attr/colorOnPrimary" />
+        android:text="Add Subcategory" />
 </LinearLayout>
