--- a/app/src/main/res/layout/item_recent_transaction.xml
+++ b/app/src/main/res/layout/item_recent_transaction.xml
@@ -52,5 +52,22 @@
             android:textColor="?android:textColorSecondary"
             android:background="?android:colorBackground"
             android:layout_marginTop="4dp" />
-    </LinearLayout>
+       </LinearLayout>
+    <!-- Edit Button -->
+    <ImageButton
+        android:id="@+id/btnEditTransaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_edit_pencil"
+        android:contentDescription="Edit"
+        android:layout_marginRight="20dp"
+        android:background="?android:selectableItemBackground" />
+    <!-- Edit Button -->
+    <ImageButton
+        android:id="@+id/btnDeleteTransaction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete"
+        android:contentDescription="Delete"
+        android:background="?android:selectableItemBackground" />
 </LinearLayout>
