--- a/app/src/main/res/layout/item_recent_transaction.xml
+++ b/app/src/main/res/layout/item_recent_transaction.xml
@@ -56,11 +56,11 @@
     <!-- Edit Button -->
     <ImageButton
         android:id="@+id/btnEditTransaction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_edit_pencil"
         android:contentDescription="Edit"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="30dp"
         android:background="?android:selectableItemBackground" />
     <!-- Edit Button -->
     <ImageButton
