--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,19 @@
     <color name="black">#FF000000</color>
     <color name="green">#0AAB0E</color>
     <color name="red">#C41B0A</color>
+    <color name="gray">#CDCACAC3</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="background">#FFFFFF</color>
     <color name="textPrimary">#000000</color>
     <color name="textSecondary">#757575</color>
-    <color name="buttonBackground">#6200EE</color>
     <color name="buttonText">#FFFFFF</color>
     <color name="income">#21E20E</color>
     <color name="expense">#FF0000</color>
     <color name="summary">#0B7CF1</color>
-    <color name="sky_blue">#19A5F3</color>
     <color name="teal_200">#03DAC5</color>
+    <color name="background">#F5F5F5</color>
+    <color name="primaryColor">#6200EE</color>
+    <color name="secondaryColor">#03DAC6</color>
+    <color name="buttonBackground">#3700B3</color>
+    <color name="sky_blue">#0288D1</color>
+
 </resources>
