--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -1,42 +1,71 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.charts.ChartActivity">
+    android:orientation="vertical">
 
-    <!-- Main container for PieChart and legend -->
+    <!-- Container for Income PieChart and Legend -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp">
 
-        <!-- Pie chart for income (takes 60% of the space) -->
+        <!-- PieChart for income with increased height -->
         <com.github.mikephil.charting.charts.PieChart
             android:id="@+id/pieChartIncome"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4" />
+            android:layout_height="200dp"
+        android:layout_weight="0" /> <!-- Removed weight to fix height -->
 
-        <!-- Pie chart for expense (takes 60% of the space) -->
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/pieChartExpense"
+        <!-- Income legend section (Scrollable) -->
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4" />
+            android:layout_height="50dp"
+            android:scrollbars="vertical">
 
-        <!-- Legend (takes 30% of the space) -->
-        <TextView
-            android:id="@+id/legend"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Legend"
-            android:textSize="16sp"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:padding="16dp"/>
+            <LinearLayout
+                android:id="@+id/incomeLegendLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <!-- Income legends will be dynamically added here -->
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Container for Expense PieChart and Legend -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp">
+
+        <!-- PieChart for expenses with increased height -->
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChartExpense"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+        android:layout_weight="0" /> <!-- Removed weight to fix height -->
+
+        <!-- Expense legend section (Scrollable) -->
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical">
+
+            <LinearLayout
+                android:id="@+id/expenseLegendLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <!-- Expense legends will be dynamically added here -->
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </LinearLayout>
+
+</LinearLayout>
