--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -41,8 +41,25 @@
             android:text="Balance: Rs. 0.00"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_margin="50dp"
+            android:layout_margin="25dp"
             android:background="?android:colorBackground"/>
+
+        <!-- Select Days -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Select the number of days for transactions"
+            android:textSize="16sp"
+            android:layout_marginBottom="8dp"
+            android:textColor="?android:textColorPrimary"/>
+
+        <!-- Spinner to select number of days -->
+        <Spinner
+            android:id="@+id/daysSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:entries="@array/days_array" />
 
         <!-- Recent Transactions -->
         <TextView
